<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Road-Naksha"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="409dp"
        android:layout_height="488dp"
        android:background="@drawable/rec1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="Select Nagar"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/nagarA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nagarA"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/nagarB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nagarB"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/nagarC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nagarC"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/nagarD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nagarD"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/nagarE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nagarE"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/nagarF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nagarF"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/nagarG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nagarG"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/nagarH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nagarH"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>



    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="365dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="59dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu12"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/adminLoginItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="315dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuIcon"
        app:srcCompat="@drawable/admin"
        android:visibility="gone"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>